Agregar rutas de imagenes desde la web

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Encriptador de Mensajes</title>
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/N9J47Lc/favicon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,17 +17,22 @@
 
 <body>
     <header>
-        <a href="https://www.aluracursos.com/"><img class="logo-aplication" src="images/logo.png"
+        <a href="https://www.aluracursos.com/"><img class="logo-aplication" src="https://i.ibb.co/sCYGg57/logo.png"
                 alt="Logo de Alura"></a>
         <span>🔑 Encriptador de mensajes 🔐</span>
     </header>
     <main>
         <section class="encrypt-section">
             <div class="vertical-ubication">
-                <textarea class="message-encrypter" spellcheck="false" placeholder="Ingresa tu mensaje aquí"></textarea>
+                <div class="horizontal-message">
+                    <textarea class="message-encrypter" spellcheck="false"
+                        placeholder="Ingresa tu mensaje aquí"></textarea>
+                    <a><img class="delete-icon" src="images/delete_icon.png" alt="Icono de borrado"></a>
+                </div>
                 <div class="horizontal-ubication">
                     <img class="information-icon" src="images/information_icon.png" alt="Icono de información">
                     <p class="instructions-message">Solo letras minúsculas y sin acentos</p>
+
                 </div>
                 <div class="buttons_container">
                     <input class="encrypt-button" type="submit" value="Encriptar">
