Corregir rutas de estilos

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width">
 
     <title>Encriptador de Mensajes</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/N9J47Lc/favicon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
