Revisión de rutas de las imagenes para github pages

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <div class="horizontal-message">
                     <textarea class="message-encrypter" spellcheck="false"
                         placeholder="Ingresa tu mensaje aquí"></textarea>
-                    <a><img class="delete-icon" src="images/delete_icon.png" alt="Icono de borrado"></a>
+                    <a><img class="delete-icon" src="img/delete_icon.png" alt="Icono de borrado"></a>
                 </div>
                 <div class="horizontal-ubication">
-                    <img class="information-icon" src="images/information_icon.png" alt="Icono de información">
+                    <img class="information-icon" src="img/information_icon.png" alt="Icono de información">
                     <p class="instructions-message">Solo letras minúsculas y sin acentos</p>
 
                 </div>
@@ -44,7 +44,7 @@
         </section>
         <section class="decrypt-section">
             <div class="central-panel">
-                <img class="result-imagen" src="images/result_image.png" alt="Imagen de busqueda">
+                <img class="result-imagen" src="img/result_image.png" alt="Imagen de busqueda">
                 <h3 class="title-result">Ningún mensaje fue encontrado</h3>
                 <p class="information-result">Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
@@ -72,15 +72,15 @@
     </main>
     <footer>
         <h1 class="copyright_text"></h1>
-        <a href="https://github.com/Frankma0117"><img class="footer-img" src="images/git_hub_logo.png"
+        <a href="https://github.com/Frankma0117"><img class="footer-img" src="img/git_hub_logo.png"
                 alt="Logo de GitHub"></a>
         <a href="https://www.linkedin.com/in/manuel-ca%C3%B1%C3%B3n-b6245118a"><img class="footer-img"
-                src="images/linkedin_logo.png" alt="Logo de LinkedIn"></a>
+                src="img/linkedin_logo.png" alt="Logo de LinkedIn"></a>
 
 
 
     </footer>
-    <script src="message_encrypter.js">
+    <script src="js/message_encrypter.js">
     </script>
 </body>
 
