Revisar rutas de imagenes

--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
     </main>
     <footer>
         <h1 class="copyright_text"></h1>
-        <a href="https://github.com/Frankma0117"><img class="footer-img" src="/img/git_hub_logo.png"
+        <a href="https://github.com/Frankma0117"><img class="footer-img" src="img/git_hub_logo.png"
                 alt="Logo de GitHub"></a>
         <a href="https://www.linkedin.com/in/manuel-ca%C3%B1%C3%B3n-b6245118a"><img class="footer-img"
-                src="/img/linkedin_logo.png" alt="Logo de LinkedIn"></a>
+                src="img/linkedin_logo.png" alt="Logo de LinkedIn"></a>
 
 
 
     </footer>
-    <script src="/js/message_encrypter.js">
+    <script src="js/message_encrypter.js">
     </script>
 </body>
 
